<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="toolbar_title">RTR-NetTest</string>
    <string name="menu_button_title_page">Home</string>
    <string name="menu_button_history">History</string>
    <string name="menu_button_statistics">Statistics</string>
    <string name="menu_button_map">Map</string>
    <string name="dialog_title_error">Error</string>
    <string name="error_unknown">Poor connection. Please try again later</string>
    <string name="no_internet_connection_not_load_data">No Internet connection. Could not load data.</string>
    <string name="tc_tobottom">Scroll down</string>
    <string name="home_signal">Signal</string>
    <string name="home_frequency">Frequency</string>
    <string name="home_speed">Velocity</string>
    <string name="home_speed_value" translatable="false">%1$.1f km/h</string>
    <string name="home_no_internet_connection">No Internet connection!</string>
    <string name="home_no_internet_connection_details">No test is possible.</string>
    <string name="home_signal_value">%1$d dBm</string>
    <string name="home_signal_secondary_value" translatable="false">%1$d/%2$d dBm</string>
    <string name="home_frequency_value" translatable="false">%1$s MHz</string>
    <string name="home_start_test_info">Press the button to start the test now!</string>
    <string name="home_wifi">WLAN</string>
    <string name="home_vpn" translatable="false">VPN</string>
    <string name="home_bluetooth" translatable="false">Bluetooth</string>
    <string name="home_coverage_mode">Coverage mode</string>
    <string name="public_ip_address">Public address</string>
    <string name="private_ip_address">Local address</string>
    <string name="home_ipv4">IPv4 address</string>
    <string name="home_ipv6">IPv6 address</string>
    <string name="home_location">Location</string>
    <string name="home_settings">Settings</string>
    <string name="home_home">Main navigation: Home</string>
    <string name="home_map">Main navigation: Map</string>
    <string name="home_statistics">Main navigation: Statistics</string>
    <string name="home_history">Main navigation: History</string>
    <string name="home_loop_mode_active">Loop mode enabled</string>
    <string name="options">Options</string>
    <string name="preferences_general_settings">General settings</string>
    <string name="preferences_ndt">NDT</string>
    <string name="preferences_qos_measurement">QoS measurement</string>
    <string name="preferences_qos_measurement_only_after_some_time">Only after 2 hours</string>
    <string name="preferences_qos_measurement_only_after_some_time_summary">Do not perform new QoS measurements, if the last one was done less than 2 hours ago.</string>
    <string name="preferences_location">Location</string>
    <string name="location_status_denied">Denied</string>
    <string name="location_status_coarse">Approximate</string>
    <string name="location_status_fine">Precise (foreground only)</string>
    <string name="location_status_background">Precise (foreground and background)</string>
    <string name="preferences_loop_mode">Loop mode</string>
    <string name="preferences_advanced_settings">Advanced settings</string>
    <string name="preferences_loop_mode_summary">New test after waiting time or covering the distance. Max. 2 days</string>
    <string name="preferences_loop_mode_min_delay">Waiting time (in minutes)</string>
    <string name="preferences_loop_mode_max_movement">Distance (in meters)</string>
    <string name="preferences_expert_mode">Expert mode</string>
    <string name="preferences_expert_mode_summary">Show advanced settings and information</string>
    <string name="preferences_ipv4_only">IPv4 only</string>
    <string name="preferences_ipv4_only_sum">Do not use IPv6</string>
    <string name="preferences_ipv6_only">IPv6 only</string>
    <string name="preferences_ipv6_only_sum">Do not use IPv4</string>
    <string name="expert_mode_no_ipv4_connectivity">No IPv4 connectivity</string>
    <string name="expert_mode_no_ipv6_connectivity">No IPv6 connectivity</string>
    <string name="expert_mode_ipv4_only_not_available">Expert setting \"IPv4-only\" is active, but no IPv4 connectivity. Please change the configuration.</string>
    <string name="expert_mode_ipv6_only_not_available">Expert setting \"IPv6-only\" is active, but no IPv6 connectivity. Please change the configuration.</string>
    <string name="preferences_radio_info">Radio info</string>
    <string name="preferences_radio_info_sum">Details on radio configuration</string>
    <string name="preferences_contact">Contact</string>
    <string name="preferences_go_to_website">Go to website</string>
    <string name="preferences_contact_us">Contact us</string>
    <string name="preferences_additional_Information">Additional information</string>
    <string name="preferences_client_uuid">Client UUID</string>
    <string name="preferences_test_cases">Number of tests performed</string>
    <string name="preferences_about">About</string>
    <string name="preferences_source_code">Source code</string>
    <string name="preferences_data_protection">Privacy policy and terms of use</string>
    <string name="preferences_developed_by">Developed by Specure GmbH</string>
    <string name="preferences_developer_page" translatable="false">https://specure.com/</string>
    <string name="preferences_design_by">Design by Feinblick</string>
    <string name="preferences_design_page" translatable="false">https://www.feinblick.com</string>
    <string name="preferences_network_info_by">Network information by NetMonster Core</string>
    <string name="preferences_network_info_page" translatable="false">https://netmonster.app/</string>
    <string name="preferences_version">Version</string>
    <string name="preferences_commit_hash">Commit hash</string>
    <string name="preferences_enter_code">Please enter the code</string>
    <string name="preferences_developer_control_server">Control server</string>
    <string name="preferences_override_control_server">Override control server</string>
    <string name="preferences_override_control_server_sum">Activate custom control server settings</string>
    <string name="preferences_override_control_server_host">Control host</string>
    <string name="preferences_override_control_server_port">Control port</string>
    <string name="preferences_override_control_server_ssl">Control SSL</string>
    <string name="preferences_override_control_server_ssl_sum">Use encrypted connection to control server</string>
    <string name="preferences_developer_options_disabled">Developer options disabled</string>
    <string name="preferences_developer_options_available">Developer options available</string>
    <string name="preferences_coverage_mode_disabled">Coverage mode disabled</string>
    <string name="preferences_coverage_mode_available">Coverage mode enabled</string>
    <string name="preferences_developer_try_again">Try again!</string>
    <string name="preferences_developer_map_server">Map server</string>
    <string name="preferences_developer_map_override">Override map server</string>
    <string name="preferences_developer_map_override_sum">Activate custom map server settings</string>
    <string name="preferences_developer_map_host">Map host</string>
    <string name="preferences_developer_map_port">Map port</string>
    <string name="preferences_developer_map_ssl">Map server SSL</string>
    <string name="preferences_developer_map_ssl_sum">Use encrypted connection to map server</string>
    <string name="preferences_category_developer_qos_server">QoS server</string>
    <string name="preferences_developer_qos_ssl">QoS server SSL</string>
    <string name="preferences_developer_qos_ssl_sum">Use encrypted connection to QoS server</string>
    <string name="preferences_all_disabled">All deactivated.</string>
    <string name="preferences_server_selection">Server selection</string>
    <string name="preferences_default_server_selection">Default</string>
    <string name="label_server_selection">Server selection</string>
    <string name="preferences_tag">Tag</string>
    <string name="location_dialog_label_title">Location</string>
    <string name="location_dialog_label_latitude">Latitude</string>
    <string name="location_dialog_label_longitude">Longitude</string>
    <string name="location_dialog_label_accuracy">Accuracy</string>
    <string name="location_dialog_label_age">Age</string>
    <string name="location_dialog_label_source">Source</string>
    <string name="location_dialog_label_altitude">Altitude</string>
    <string name="location_dialog_label_speed">Speed</string>
    <string name="location_dialog_label_signal">Signal (%1$s)</string>
    <string name="label_download">Download</string>
    <string name="speed_progress_units" translatable="false">Mbit/s</string>
    <string name="history_item_header_test">Date</string>
    <string name="history_item_header_down">Down</string>
    <string name="history_item_header_up">Up</string>
    <string name="history_item_header_ping">Ping</string>
    <string name="history_item_header_ms">ms</string>
    <string name="text_button_accept">Accept</string>
    <string name="content_label_close">Close</string>
    <string name="title_open_nettest_accuracy">Permissions for RTR-Netztest</string>
    <string name="subtitle_open_nettest_accuracy">RTR-NetTest requires certain permissions to work.</string>
    <string name="phone_permission_title">1. Phone permission</string>
    <string name="location_permission_title">2. Location permission</string>
    <string name="phone_permission_explanation">RTR-NetTest does not make phone calls. The telephone permission is necessary to identify the provider.</string>
    <string name="location_permission_explanation">The location permission is necessary to identify the measurement location and to display it on the map. Without precise location permission, signal strength is unavailable on many devices. Use of loop mode while on the move is only possible with location permission.</string>
    <string name="location_permissions_disclaimer">RTR-NetTest uses the location permission only during the measurement, the background permission is required to allow to run the loop mode in background.</string>
    <string name="PDF" translatable="false">PDF</string>
    <string name="CSV" translatable="false">CSV</string>
    <string name="XLSX" translatable="false">XLSX</string>
    <string name="notification_permission_title">3. Notification permission</string>
    <string name="notification_permission_explanation">The notification permission is necessary to keep app alive during measurements executed on the background. Without notification permission, you will be not able to track measurement progress when app is on the background. The notification permission is required to allow to run the loop mode in background.</string>
    <string name="download_history_as_pdf">Download history as PDF</string>
    <string name="download_history_as_xlsx">Download history as XLSX</string>
    <string name="download_history_as_csv">Download history as CSV</string>
    <string name="history_list_header_date">History list header: date</string>
    <string name="history_list_header_download_speed">History list header: download speed</string>
    <string name="history_list_header_download_speed_units">History list header: download speed units: Mbit/s </string>
    <string name="history_list_header_upload_speed">History list header: upload speed</string>
    <string name="history_list_header_upload_speed_units">History list header: upload speed units: Mbit/s </string>
    <string name="history_list_header_ping">History list header: ping</string>
    <string name="history_list_header_ping_units">History list header: ping units: milliseconds </string>
    <string name="history_list_header_container">History list header container</string>
</resources>