<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/padding_extra_large"
        android:paddingTop="@dimen/padding_medium"
        android:contentDescription="@string/history_list_header_container"
        android:paddingEnd="@dimen/padding_large"
        android:paddingBottom="@dimen/padding_medium">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/RobotoRegularStyle.VerySmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_weight="2"
            android:text="@string/history_item_header_test"
            android:contentDescription="@string/history_list_header_date"
            android:textColor="@color/text_gray_transparency_60" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/RobotoRegularStyle.VerySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_item_header_down"
                android:contentDescription="@string/history_list_header_download_speed"
                android:textColor="@color/text_gray_transparency_60" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/RobotoRegularStyle.VerySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed_progress_units"
                android:contentDescription="@string/history_list_header_download_speed_units"
                android:textColor="@color/text_gray_transparency_60"
                android:textSize="@dimen/history_label_text_size" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/margin_small"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/RobotoRegularStyle.VerySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_item_header_up"
                android:contentDescription="@string/history_list_header_upload_speed"
                android:textColor="@color/text_gray_transparency_60" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/RobotoRegularStyle.VerySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed_progress_units"
                android:textColor="@color/text_gray_transparency_60"
                android:contentDescription="@string/history_list_header_upload_speed_units"
                android:textSize="@dimen/history_label_text_size" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/margin_small"
            android:paddingStart="@dimen/padding_medium"
            android:paddingEnd="@dimen/padding_medium"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/RobotoRegularStyle.VerySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_item_header_ping"
                android:contentDescription="@string/history_list_header_ping"
                android:textColor="@color/text_gray_transparency_60" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/RobotoRegularStyle.VerySmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_item_header_ms"
                android:textColor="@color/text_gray_transparency_60"
                android:contentDescription="@string/history_list_header_ping_units"
                android:textSize="@dimen/history_label_text_size" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>