<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <keep_state_fragment
        android:id="@+id/navigation_home"
        android:name="at.rtr.rmbt.android.ui.fragment.HomeFragment"
        android:label="@string/menu_button_title_page"
        tools:layout="@layout/fragment_home2" />

    <keep_state_fragment
        android:id="@+id/navigation_history"
        android:name="at.rtr.rmbt.android.ui.fragment.HistoryFragment"
        android:label="@string/menu_button_history"
        tools:layout="@layout/fragment_history" />

    <keep_state_fragment
        android:id="@+id/navigation_statistics"
        android:name="at.rtr.rmbt.android.ui.fragment.StatisticsFragment"
        android:label="@string/menu_button_statistics"
        tools:layout="@layout/fragment_statistics" />

    <keep_state_fragment
        android:id="@+id/navigation_map"
        android:name="at.rtr.rmbt.android.ui.fragment.MapFragment"
        android:label="@string/menu_button_map"
        tools:layout="@layout/fragment_map" />

    <keep_state_fragment
        android:id="@+id/navigation_network_info"
        android:name="at.rtr.rmbt.android.ui.fragment.NetworkDetailsFragment"
        android:label="Network Details"
        tools:layout="@layout/fragment_network_details" />
</navigation>