<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/basic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title"
                    style="@style/RobotoMediumStyle.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/title_open_nettest_accuracy"
                    android:textSize="30sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/subtitle"
                    style="@style/RobotoRegularStyle.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/subtitle_open_nettest_accuracy"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/permission_title_first"
                    style="@style/RobotoMediumStyle.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="44dp"
                    android:text="@string/phone_permission_title"
                    android:textSize="23sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/subtitle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/permission_text_first"
                    style="@style/RobotoRegularStyle.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/phone_permission_explanation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/permission_title_first" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/permission_title_second"
                    style="@style/RobotoMediumStyle.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="44dp"
                    android:text="@string/location_permission_title"
                    android:textSize="23sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/permission_text_first" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/permission_text_second"
                    style="@style/RobotoRegularStyle.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/location_permission_explanation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/permission_title_second" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/permission_text_third"
                    style="@style/RobotoRegularStyle.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/location_permissions_disclaimer"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/permission_text_second" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/permission_title_third"
                    style="@style/RobotoMediumStyle.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="44dp"
                    android:text="@string/notification_permission_title"
                    android:textSize="23sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/permission_text_third" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/permission_text_fourth"
                    style="@style/RobotoRegularStyle.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:text="@string/notification_permission_explanation"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/permission_title_third" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/accept"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_medium"
                    android:background="@drawable/button_green_background"
                    android:clickable="false"
                    android:text="@string/text_button_accept"
                    android:textColor="@android:color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/permission_text_fourth" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>